spade-tests/src/snapshots/spade_tests__integration__trait_tests__impl_on_tuple_is_error.snap
---
source: spade-tests/src/integration.rs
---
impl (bool, bool) {}


error: Impl blocks can only be used on named types.
  ┌─ testinput:1:6
  │
1 │ impl (bool, bool) {}
  │      ^^^^^^^^^^^^ Impl block on non-named type
