spade-tests/src/snapshots/spade_tests__integration__trait_tests__impls_require_correct_signature_missing_args.snap
---
source: spade-tests/src/integration.rs
---
trait X {
    fn a(self, x: bool) -> bool;
}

struct A {}

impl X for A {
    fn a(self) -> bool{
        true
    }
}


error: Missing argument x
  ┌─ testinput:8:9
  │
2 │     fn a(self, x: bool) -> bool;
  │                - The trait method has this argument
  ·
8 │     fn a(self) -> bool{
  │         ^^^^^^ Missing argument x
