spade-tests/src/snapshots/spade_tests__integration__trait_tests__impls_require_correct_signature_unknown_arg.snap
---
source: spade-tests/src/integration.rs
---
trait X {
    fn a(self) -> bool;
}

struct A {}

impl X for A {
    fn a(self, x: bool) -> bool{
        true
    }
}


error: Trait method does not have this argument
  ┌─ testinput:8:16
  │
2 │     fn a(self) -> bool;
  │        - Method defined here
  ·
8 │     fn a(self, x: bool) -> bool{
  │                ^ Extra argument
