spade-tests/src/snapshots/spade_tests__integration__trait_tests__instantiating_pipeline_methods_works.snap
---
source: spade-tests/src/integration.rs
---
struct X {
    payload: bool,
}

impl X {
    pipeline(10) a(self) -> bool {reg*10; true}
}

fn t(x: X) -> bool {
    x.inst(10) a()
}


error: cannot instantiate entities and pipelines in functions
   ┌─ testinput:10:7
   │
 9 │ fn t(x: X) -> bool {
   │ -- this is a function
10 │     x.inst(10) a()
   │       ^^^^ inst not allowed here
   │
   = note: functions can only contain combinatorial logic
   = consider making the function an entity
   │
 9 │ entity t(x: X) -> bool {
   │ ~~~~~~
