spade-tests/src/snapshots/spade_tests__integration__trait_tests__method_which_does_not_take_self_is_an_error.snap
---
source: spade-tests/src/integration.rs
---
struct X {}
impl X {
    fn test(x: bool) -> bool {true}
}

fn main(x: X) -> bool {
    x.test$(y: 1)
}


error: Method must take 'self' as the first parameter
  ┌─ testinput:3:12
  │
3 │     fn test(x: bool) -> bool {true}
  │            ^^^^^^^^^ Missing self
  │
  = Consider adding self
  │
3 │     fn test(self, x: bool) -> bool {true}
  │             ++++++
