spade-tests/src/snapshots/spade_tests__integration__trait_tests__missing_3_method_in_trait_def_errors.snap
---
source: spade-tests/src/integration.rs
---
trait X {
    fn a(self);
    fn b(self);
    fn c(self);
}

struct A {}

impl X for A {
}


error: Missing methods `a`, `b` and `c`
   ┌─ testinput:9:1
   │  
 9 │ ╭ impl X for A {
10 │ │ }
   │ ╰─^ Missing definition of `a`, `b` and `c` in this impl block
