spade-tests/src/snapshots/spade_tests__integration__trait_tests__missing_method_in_trait_def_errors.snap
---
source: spade-tests/src/integration.rs
---
trait X {
    fn a(self);
}

struct A {}

impl X for A {
}


error: Missing methods `a`
  ┌─ testinput:7:1
  │  
7 │ ╭ impl X for A {
8 │ │ }
  │ ╰─^ Missing definition of `a` in this impl block
