spade-tests/src/snapshots/spade_tests__integration__trait_tests__multiple_anonymous_impls_of_same_function_is_an_error.snap
---
source: spade-tests/src/integration.rs
---
struct X {}

impl X {
    fn a(self) -> bool {true}
}

impl X {
    fn a(self) -> bool {false}
}


error: X already has a method named a
  ┌─ testinput:8:5
  │
4 │     fn a(self) -> bool {true}
  │     ------------------------- Previous definition here
  ·
8 │     fn a(self) -> bool {false}
  │     ^^^^^^^^^^^^^^^^^^^^^^^^^^ Duplicate method
